fluence/tests/compilation_tests/export_functions/inner_vec_refs.stderr
error: cannot find attribute `fce` in this scope
 --> $DIR/inner_vec_refs.rs:8:3
  |
8 | #[fce]
  |   ^^^

error: cannot find attribute `fce` in this scope
 --> $DIR/inner_vec_refs.rs:3:3
  |
3 | #[fce]
  |   ^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> $DIR/inner_vec_refs.rs:1:1
   |
1  | / #![allow(improper_ctypes)]
2  | |
3  | | #[fce]
4  | | pub fn inner_arrays_2(_arg: &Vec<Vec<Vec<Vec<u8>>>>) -> &Vec<Vec<&Vec<Vec<u8>>>> {
...  |
10 | |     unimplemented!()
11 | | }
   | |_^ consider adding a `main` function to `$DIR/tests/compilation_tests/export_functions/inner_vec_refs.rs`
